[gd_scene load_steps=6 format=2]

[ext_resource path="res://kenney_platformerkit/blockDirt.glb" type="PackedScene" id=1]
[ext_resource path="res://scripts/blockDirt.gd" type="Script" id=2]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( 4.67799e-013, 1, 5.0606e-013, 0, 0, 0, 0, 1, -1, 0, 0, -1, 0, 0, -1, 0, 0, 0, 1, 0, -1, 1, 0, 0, 0, 1, -1, 1, 1, -1, 4.67799e-013, 1, 5.0606e-013, 1, 1, -7.21911e-016, 0, 0, -1, 1, 0, -1, 0, 1, -1, 1, 1, -1, 1, 0, 0, 0, 0, 0, 1, 1, -7.21911e-016, 4.67799e-013, 1, 5.0606e-013, 1, 0, 0, 1, 1, -7.21911e-016, 1, 0, -1, 1, 1, -1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.458824, 0.458824, 0.458824, 1 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )
size = Vector3( 1, 1, 1 )

[node name="blockDirt" groups=[
"block",
] instance=ExtResource( 1 )]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="blockDirt(Clone)" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )

[node name="CollisionShape" type="CollisionShape" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
shape = SubResource( 1 )

[node name="selected" type="MeshInstance" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0.5 )
visible = false
mesh = SubResource( 3 )
material/0 = null
[connection signal="mouse_entered" from="." to="." method="_on_blockDirt_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_blockDirt_mouse_exited"]
